# ChangeLog for media-video/transcode
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/transcode/ChangeLog,v 1.177 2007/05/19 15:39:24 nixnut Exp $

  19 May 2007; nixnut <nixnut@gentoo.org> transcode-1.0.3.ebuild:
  Stable on ppc wrt bug 178871

  19 May 2007; Markus Rothe <corsair@gentoo.org> transcode-1.0.3.ebuild:
  Stable on ppc64; bug #178871

  18 May 2007; Peter Weller <welp@gentoo.org> transcode-1.0.3.ebuild:
  Stable on amd64 wrt bug 178871

  17 May 2007; Raúl Porcel <armin76@gentoo.org> transcode-1.0.3.ebuild:
  x86 stable wrt #178871

  17 May 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  transcode-1.0.3.ebuild:
  Stable on sparc wrt #178871

*transcode-1.0.3 (20 Apr 2007)

  20 Apr 2007; Steve Dibb <beandog@gentoo.org> +transcode-1.0.3.ebuild:
  Version bump

  14 Apr 2007; Alexis Ballier <aballier@gentoo.org>
  transcode-1.0.3_rc2_p20070310-r1.ebuild:
  Bump libquicktime deps to >=0.9.8 as this is the least version required, bug
  #174561

  31 Mar 2007; Steve Dibb <beandog@gentoo.org> -transcode-1.0.2-r2.ebuild,
  transcode-1.0.2-r3.ebuild, transcode-1.0.2-r4.ebuild,
  transcode-1.0.3_rc2_p20070310-r1.ebuild,
  transcode-1.1.0_pre20070315-r1.ebuild:
  Fix x11 dependencies, bug 157979

  25 Mar 2007; Alexis Ballier <aballier@gentoo.org>
  +files/transcode-1.0.3_rc2_p20070310-libmpeg3.patch,
  transcode-1.0.3_rc2_p20070310-r1.ebuild:
  Fix to build and work with libmpeg3 1.7

*transcode-1.1.0_pre20070315-r1 (24 Mar 2007)

  24 Mar 2007; Steve Dibb <beandog@gentoo.org>
  -transcode-1.1.0_pre20070315.ebuild,
  +transcode-1.1.0_pre20070315-r1.ebuild:
  Fix lzo dependency

*transcode-1.0.3_rc2_p20070310-r1 (24 Mar 2007)

  24 Mar 2007; Steve Dibb <beandog@gentoo.org>
  -transcode-1.0.3_rc2_p20070310.ebuild,
  +transcode-1.0.3_rc2_p20070310-r1.ebuild:
  Fix a52 configuration flags, fix lzo dependency

*transcode-1.1.0_pre20070315 (16 Mar 2007)
