@@ -1,3 +1,6 @@
 MD5 4f6eb832123ea28c54f0d4952733bcb6 transcode-1.0.3.tar.bz2 1987499
 RMD160 f7c2db91be55c14a8e59eee4467a7f6a1bd73c83 transcode-1.0.3.tar.bz2 1987499
 SHA256 9a98e307f78fde36bb55b891dcbf8d2be3d2def9ae016255959e0664be9785f9 transcode-1.0.3.tar.bz2 1987499
+MD5 ece32a8f6bce5bd9d06841bec8cc263e transcode-types.patch.bz2 5021
+RMD160 956ea116495a57e304ab71a20ccd45ffd7416544 transcode-types.patch.bz2 5021
+SHA256 02bf6ac9a2e039336e103d43acbe7c86975bc3b587dc9dfa23992bd949fc2170 transcode-types.patch.bz2 5021
